--- a/src/SharedWeb/SharedWeb.csproj
+++ b/src/SharedWeb/SharedWeb.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.32" />
       <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.5.1" />
       <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.5.1" />
       <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.5.1-beta.1" />
