--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -204,7 +204,7 @@ jobs:
 
       - name: Report upcoming release version to Slack
         if: ${{ steps.version-changed.outputs.changes_to_commit == 'TRUE' }} && ${{ inputs.enable_slack_notification == true }}
-        uses: bitwarden/gh-actions/report-upcoming-release-version@main
+        uses: bitwarden/gh-actions/report-upcoming-release-version@task/BRE-87
         with:
           version: ${{ steps.set-final-version-output.outputs.version }}
           project: ${{ github.repository }}
