--- a/ephemeral-environments/ephemeral-environment-hello-world.yaml
+++ b/ephemeral-environments/ephemeral-environment-hello-world.yaml
@@ -1,6 +1,9 @@
 general:
   webVersionOverride: 2024.3.0
 component:
+  admin:
+    image:
+      name: bitwardenprod.azurecr.io/admin
   api:
     image:
       name: bitwardenprod.azurecr.io/api
