--- a/ephemeral-environments/ephemeral-environment-hello-world.yaml
+++ b/ephemeral-environments/ephemeral-environment-hello-world.yaml
@@ -4,6 +4,7 @@ component:
   admin:
     image:
       name: bitwardenprod.azurecr.io/admin
+      tag:
   api:
     image:
       name: bitwardenprod.azurecr.io/api
