--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,6 +3,7 @@
     "tasks": [
         {
             "label": "buildIdentityApi",
+            "hide": true,
             "dependsOrder": "sequence",
             "dependsOn": [
                 "buildIdentity",
@@ -14,6 +15,7 @@
         },
         {
             "label": "buildIdentityApiAdmin",
+            "hide": true,
             "dependsOrder": "sequence",
             "dependsOn": [
                 "buildIdentity",
@@ -26,6 +28,7 @@
         },
         {
             "label": "buildFullServer",
+            "hide": true,
             "dependsOrder": "sequence",
             "dependsOn": [
                 "buildAdmin",
@@ -40,6 +43,7 @@
         },
         {
             "label": "buildSelfHostBit",
+            "hide": true,
             "dependsOrder": "sequence",
             "dependsOn": [
                 "buildAdmin",
@@ -52,6 +56,7 @@
         },
         {
             "label": "buildSelfHostOss",
+            "hide": true,
             "dependsOrder": "sequence",
             "dependsOn": [
                 "buildAdmin",
@@ -62,6 +67,7 @@
         },
         {
             "label": "buildIcons",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -74,6 +80,7 @@
         },
         {
             "label": "buildPortal",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -86,6 +93,7 @@
         },
         {
             "label": "buildSso",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -98,6 +106,7 @@
         },
         {
             "label": "buildEvents",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -110,6 +119,7 @@
         },
         {
             "label": "buildEventsProcessor",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -122,6 +132,7 @@
         },
         {
             "label": "buildAdmin",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -134,6 +145,7 @@
         },
         {
             "label": "buildIdentity",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -146,6 +158,7 @@
         },
         {
             "label": "buildAPI",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -162,6 +175,7 @@
         },
         {
             "label": "buildNotifications",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -178,6 +192,7 @@
         },
         {
             "label": "buildBilling",
+            "hide": true,
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -191,20 +206,6 @@
                 "kind": "build",
                 "isDefault": true
             }
-        },
-        {
-            "label": "clean",
-            "type": "shell",
-            "command": "dotnet clean",
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "shared",
-                "showReuseMessage": true,
-                "clear": false
-            },
-            "problemMatcher": "$msCompile"
         },
         {
             "label": "test",
@@ -226,12 +227,14 @@
         },
         {
             "label": "Setup Secrets",
+            "detail": "A task to run setup_secrets.ps1",
             "type": "shell",
             "command": "pwsh -WorkingDirectory ${workspaceFolder}/dev -Command '${workspaceFolder}/dev/setup_secrets.ps1 -clear:$${input:setupSecretsClear}'",
             "problemMatcher": []
         },
         {
             "label": "Install Dev Cert",
+            "detail": "A task to install the Bitwarden developer cert to run your local install as an admin.",
             "type": "shell",
             "command": "dotnet tool install -g dotnet-certificate-tool -g && certificate-tool add --file ${workspaceFolder}/dev/dev.pfx --password '${input:certPassword}'",
             "problemMatcher": []
