Add Modify Database Task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -238,6 +238,13 @@
             "type": "shell",
             "command": "dotnet tool install -g dotnet-certificate-tool -g && certificate-tool add --file ${workspaceFolder}/dev/dev.pfx --password '${input:certPassword}'",
             "problemMatcher": []
+        },
+        {
+            "label": "Modify Database",
+            "detail": "A task to change database choice and help get it ready to use.",
+            "type": "shell",
+            "command": "pwsh -WorkingDirectory ${workspaceFolder}/dev -Command '${workspaceFolder}/dev/modify_database.ps1 -Provider ${input:databaseProvider} -RunMigrations:$${input:databaseRunMigrations}'",
+            "problemMatcher": []
         }
     ],
     "inputs": [
@@ -262,6 +269,44 @@
             "type": "promptString",
             "description": "Password for your dev certificate.",
             "password": true
+        },
+        {
+            "id": "databaseProvider",
+            "type": "pickString",
+            "default": "sqlServer",
+            "description": "The database to make your provider.",
+            "options": [
+                {
+                    "label": "MS SQL Server",
+                    "value": "sqlserver"
+                },
+                {
+                    "label": "SQLite",
+                    "value": "sqlite"
+                },
+                {
+                    "label": "PostgreSQL",
+                    "value": "postgresql"
+                },
+                {
+                    "label": "MySQL",
+                    "value": "mysql"
+                }
+            ]
+        },
+        {
+            "id": "databaseRunMigrations",
+            "type": "pickString",
+            "default": "true",
+            "description": "Whether or not to run migrations for the selected database",
+            "options": [
+                {
+                    "value": "true",
+                },
+                {
+                    "value": "false"
+                }
+            ]
         }
     ]
 }
