--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -38,6 +38,11 @@
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.39.1" />
     <PackageReference Include="Microsoft.Azure.NotificationHubs" Version="4.2.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+    <!-- 
+      Azure.Identity is an explicit version bump for Microsoft.Data.SqlClient
+      it can be removed once Microsoft.Data.SqlClient bumps their dependency past 1.12.0+
+     -->
+    <PackageReference Include="Azure.Identity" Version="1.12.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Cosmos" Version="1.6.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="8.0.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
