--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -83,6 +83,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           dotnet-sonarscanner begin /k:"${{ github.repository_owner }}_${{ github.event.repository.name }}" \
+          /d:sonar.tests=test/ /d:sonar.sources=. /d:sonar.test.inclusions=test/ /d:sonar.exclusions=test/ \
           /o:"${{ github.repository_owner }}" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
           /d:sonar.host.url="https://sonarcloud.io"
           dotnet build
