--- a/bitwarden_license/src/Sso/Sso.csproj
+++ b/bitwarden_license/src/Sso/Sso.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\..\..\src\SharedWeb\SharedWeb.csproj" />
   </ItemGroup>
 
+  <Target Name="NodePreCompileTarget" BeforeTargets="Build">
+    <Exec Command="npm run build"/>
+  </Target>
+
 </Project>
