--- a/src/Admin/Admin.csproj
+++ b/src/Admin/Admin.csproj
@@ -24,4 +24,7 @@
     </When>
   </Choose>
 
+  <Target Name="NodePreCompileTarget" BeforeTargets="Build">
+    <Exec Command="npm run build"/>
+  </Target>
 </Project>
