--- a/bitwarden_license/src/Sso/package.json
+++ b/bitwarden_license/src/Sso/package.json
@@ -5,17 +5,21 @@
   "repository": "https://github.com/bitwarden/enterprise",
   "license": "-",
   "scripts": {
-    "build": "gulp build"
+    "build": "webpack"
+  },
+  "dependencies": {
+    "bootstrap": "4.6.2",
+    "font-awesome": "4.7.0",
+    "jquery": "3.7.1",
+    "popper.js": "1.16.1"
   },
   "devDependencies": {
-    "bootstrap": "4.6.2",
-    "del": "6.1.1",
-    "font-awesome": "4.7.0",
-    "gulp": "4.0.2",
-    "gulp-sass": "5.1.0",
-    "jquery": "3.7.1",
-    "merge-stream": "2.0.0",
-    "popper.js": "1.16.1",
-    "sass": "1.75.0"
+    "css-loader": "7.1.2",
+    "expose-loader": "5.0.0",
+    "mini-css-extract-plugin": "2.9.0",
+    "sass": "1.75.0",
+    "sass-loader": "16.0.0",
+    "webpack": "5.93.0",
+    "webpack-cli": "5.1.4"
   }
 }
