Add one more permission

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: check-run
     permissions:
+      checks: write
       contents: read
       pull-requests: write
 
