--- a/.github/workflows/code-references.yml
+++ b/.github/workflows/code-references.yml
@@ -1,19 +1,36 @@
----
 name: Collect code references
 
 on:
   pull_request:
-    branches-ignore:
-      - "renovate/**"
-
-permissions:
-  contents: read
-  pull-requests: write
 
 jobs:
+  check-ld-secret:
+    name: Check for LD secret
+    runs-on: ubuntu-22.04
+    outputs:
+      available: ${{ steps.check-ld-secret.outputs.available }}
+    permissions:
+      contents: read
+
+    steps:
+      - name: Check
+        id: check-ld-secret
+        run: |
+          if [ "${{ secrets.LD_ACCESS_TOKEN }}" != '' ]; then
+            echo "available=true" >> $GITHUB_OUTPUT;
+          else
+            echo "available=false" >> $GITHUB_OUTPUT;
+          fi
+
   refs:
     name: Code reference collection
     runs-on: ubuntu-22.04
+    needs: check-ld-secret
+    if: ${{ needs.check-ld-secret.outputs.available == 'true' }}
+    permissions:
+      contents: read
+      pull-requests: write
+
     steps:
       - name: Check out repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
