--- a/.github/workflows/test-database.yml
+++ b/.github/workflows/test-database.yml
@@ -58,15 +58,21 @@ jobs:
       
       - name: Checking pending model changes (MySQL)
         working-directory: "util/MySqlMigrations"
-        run: "dotnet ef migrations has-pending-model-changes"
+        run: 'dotnet ef migrations has-pending-model-changes --connection "$CONN_STR" -- --GlobalSettings:MySql:ConnectionString="$CONN_STR"'
+        env:
+          CONN_STR: "server=localhost;uid=root;pwd=SET_A_PASSWORD_HERE_123;database=vault_dev;Allow User Variables=true"
 
       - name: Checking pending model changes (Postgres)
         working-directory: "util/PostgresMigrations"
-        run: "dotnet ef migrations has-pending-model-changes"
+        run: 'dotnet ef migrations has-pending-model-changes --connection "$CONN_STR" -- --GlobalSettings:PostgreSql:ConnectionString="$CONN_STR"'
+        env:
+          CONN_STR: "Host=localhost;Username=postgres;Password=SET_A_PASSWORD_HERE_123;Database=vault_dev"
 
       - name: Checking pending model changes (SQLite)
         working-directory: "util/SqliteMigrations"
-        run: "dotnet ef migrations has-pending-model-changes"
+        run: 'dotnet ef migrations has-pending-model-changes --connection "$CONN_STR" -- --GlobalSettings:Sqlite:ConnectionString="$CONN_STR"'
+        env:
+          CONN_STR: "Data Source=${{ runner.temp }}/test.db"
 
       - name: Migrate SQL Server
         run: 'dotnet run --project util/MsSqlMigratorUtility/ "$CONN_STR"'
