Upgrade Stripe.net to 45.7.0

--- a/src/Billing/appsettings.json
+++ b/src/Billing/appsettings.json
@@ -59,6 +59,7 @@
     "stripeWebhookKey": "SECRET",
     "stripeWebhookSecret": "SECRET",
     "stripeWebhookSecret20231016": "SECRET",
+    "stripeWebhookSecret20240620": "SECRET",
     "bitPayWebhookKey": "SECRET",
     "appleWebhookKey": "SECRET",
     "payPal": {
