Test new value input for tag

--- a/ephemeral-environments/ephemeral-environment-hello-world.yaml
+++ b/ephemeral-environments/ephemeral-environment-hello-world.yaml
@@ -4,7 +4,7 @@ component:
   admin:
     image:
       name: bitwardenprod.azurecr.io/admin
-      tag:
+      tag: "dev"
   api:
     image:
       name: bitwardenprod.azurecr.io/api
